--- a/README.rdoc
+++ b/README.rdoc
@@ -26,3 +26,8 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+TO DO***
+google maps api
+images
+colorado compass logo
