--- a/README.rdoc
+++ b/README.rdoc
@@ -1,26 +1,3 @@
-== README
-
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
-
-TO DO***
-google maps api
-images
-colorado compass logo
+#Mile High Parks
+Mile High Parks is an app to help with access to Denver's Parks. It allows you to filter by facilities.
+This app was built in during the Rocky Mountain Civic Hackathon over MLK Jr. weekend.
